<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_reset"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_reset" />

    <group>
        <item
            android:id="@+id/nav_newgame"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_highscore"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_highscore" />
    </group>

    <group>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>

</menu>