<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="tu_darmstadt.sudoku.ui.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/main_content"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layoutDirection="ltr">

                <android.support.v4.view.ViewPager
                    android:id="@+id/scroller"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <ImageView
                    android:id="@+id/arrow_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:onClick="onClick"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

                <ImageView
                    android:id="@+id/arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:onClick="onClick"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="6"
                android:baselineAligned="false"
                android:divider="#000"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:weightSum="8"
                tools:context="tu_darmstadt.sudoku.ui.MainActivity">

                <TextView
                    android:id="@+id/difficultyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_easy"
                    android:textSize="@dimen/main_text_difficulty" />

                <RatingBar
                    android:id="@+id/difficultyBar"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:numStars="3"
                    android:rating="1"
                    android:stepSize="1"
                    android:focusable="true" />

                <Button
                    android:id="@+id/playButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_weight="3"
                    android:background="@drawable/standalone_button"
                    android:clickable="false"
                    android:elevation="10dp"
                    android:onClick="onClick"
                    android:text="@string/new_game"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/continueButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_weight="3"
                    android:background="@drawable/standalone_button"
                    android:capitalize="none"
                    android:clickable="false"
                    android:onClick="onClick"
                    android:text="@string/menu_continue_game"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal" />

                <!--  <Button
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="coachMark"
                      android:visibility="visible"
                      android:onClick="coachMark"/> -->
                <!--
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:weightSum="2">
                                <Button
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="30dp"
                                    android:layout_marginRight="1dp"
                                    android:text="@string/menu_highscore"
                                    android:textStyle="normal"
                                    android:id="@+id/highscoreButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:onClick="onClick"
                                    android:capitalize="none"
                                    android:clickable="false"/>
                                <Button
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="1dp"
                                    android:layout_marginRight="30dp"
                                    android:text="@string/menu_settings"
                                    android:textStyle="normal"
                                    android:id="@+id/settingsButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:onClick="onClick"
                                    android:capitalize="none"
                                    android:clickable="false"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:weightSum="2">
                                <Button
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="30dp"
                                    android:layout_marginRight="1dp"
                                    android:text="@string/menu_about"
                                    android:textStyle="normal"
                                    android:id="@+id/aboutButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:onClick="onClick"
                                    android:capitalize="none"
                                    android:clickable="false"/>
                                <Button
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="1dp"
                                    android:layout_marginRight="30dp"
                                    android:text="@string/menu_help"
                                    android:textStyle="normal"
                                    android:id="@+id/helpButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:onClick="onClick"
                                    android:capitalize="none"
                                    android:clickable="false"/>
                            </LinearLayout>
                -->
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer_main" />

</android.support.v4.widget.DrawerLayout>
